--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "@svgdotjs/svg.js": "^3.1.2"
+    "@svgdotjs/svg.js": "^3.1.2",
+    "d3": "^7.6.1"
   }
 }
